--- a/Unity Files/Assembly-CSharp.csproj
+++ b/Unity Files/Assembly-CSharp.csproj
@@ -56,13 +56,10 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\DynamicJoystick.cs" />
     <Compile Include="Assets\Scripts\Interactable_Scripts\InteractableAnimation.cs" />
     <Compile Include="Assets\Scripts\Other_Scripts\ConfigScript.cs" />
     <Compile Include="Assets\LeanTween\Framework\LeanTween.cs" />
     <Compile Include="Assets\LeanTween\Framework\LTDescr.cs" />
-    <Compile Include="Assets\Joystick Pack\Scripts\Base\Joystick.cs" />
-    <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\Numeric Puzzle\NumericTaskOperator.cs" />
     <Compile Include="Assets\LeanTween\Framework\LeanTweenExt.cs" />
     <Compile Include="Assets\Scripts\SceneLoaders_Scripts\InitialLoader.cs" />
     <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\Rotation Puzzle\RotationTask.cs" />
@@ -73,66 +70,70 @@
     <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\ToyGatherPuzzle\ToyGatherPuzzle.cs" />
     <Compile Include="Assets\Scripts\GameEvents_Script\GameEventListenterWithDelay.cs" />
     <Compile Include="Assets\Scripts\Interactable_Scripts\InteractableNote.cs" />
-    <Compile Include="Assets\Scripts\GameLogic_Scripts\GamePauser.cs" />
     <Compile Include="Assets\Scripts\TranslationSystem_Scripts\Translator_UI_Text.cs" />
-    <Compile Include="Assets\LeanTween\Framework\LeanAudio.cs" />
-    <Compile Include="Assets\Scripts\Player_Scripts\PlayerInteractions.cs" />
-    <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\PuzzleStats.cs" />
     <Compile Include="Assets\Scripts\Interactable_Scripts\PickUpObject.cs" />
     <Compile Include="Assets\Scripts\GameLogic_Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Player_Scripts\PlayerMovement_Scripts\CameraMovement.cs" />
-    <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\Numeric Puzzle\NumericPuzzle.cs" />
     <Compile Include="Assets\Scripts\FeedbackLights_Scripts\FeedbackLightBulb.cs" />
     <Compile Include="Assets\Scripts\Interfaces and Others\GameState.cs" />
+    <Compile Include="Assets\Balaso Software\Example\AppTrackingTransparencyExample.cs" />
+    <Compile Include="Assets\Scripts\TranslationSystem_Scripts\LanguageSettings.cs" />
+    <Compile Include="Assets\Scripts\Player_Scripts\PlayerInputs.cs" />
+    <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\Rotation Puzzle\RotationPuzzle.cs" />
+    <Compile Include="Assets\Scripts\FeedbackLights_Scripts\FeedbackPuzzleLights.cs" />
+    <Compile Include="Assets\Scripts\SceneLoaders_Scripts\LoadSceneWithLoadingBar.cs" />
+    <Compile Include="Assets\Scripts\UI_Scripts\UI_Manager.cs" />
+    <Compile Include="Assets\Scripts\Other_Scripts\ConfigPlayerLookSensitivity.cs" />
+    <Compile Include="Assets\Scripts\Player_Scripts\TriggerCutscene.cs" />
+    <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\ToyGatherPuzzle\ToyGatherTask.cs" />
+    <Compile Include="Assets\Scripts\Other_Scripts\OpenWebPage.cs" />
+    <Compile Include="Assets\Scripts\Twean_Scripts\TweenerAnimation.cs" />
+    <Compile Include="Assets\Scripts\UI_Scripts\UI_InputButton.cs" />
+    <Compile Include="Assets\Scripts\IAP\ComprasIAP.cs" />
+    <Compile Include="Assets\Joystick Pack\Examples\JoystickPlayerExample.cs" />
+    <Compile Include="Assets\Scripts\Twean_Scripts\LeanTweanerListAnimator.cs" />
+    <Compile Include="Assets\Scripts\TranslationSystem_Scripts\Base System\Language.cs" />
+    <Compile Include="Assets\LeanTween\Framework\LTDescrOptional.cs" />
+    <Compile Include="Assets\Scripts\GameEvents_Script\AvailableGameEvents.cs" />
+    <Compile Include="Assets\Scripts\UI_Scripts\NoteOperator.cs" />
+    <Compile Include="Assets\Scripts\GameEvents_Script\GameEvent.cs" />
+    <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\DynamicJoystick.cs" />
+    <Compile Include="Assets\Joystick Pack\Scripts\Base\Joystick.cs" />
+    <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\Numeric Puzzle\NumericTaskOperator.cs" />
+    <Compile Include="Assets\Scripts\GameLogic_Scripts\GamePauser.cs" />
+    <Compile Include="Assets\LeanTween\Framework\LeanAudio.cs" />
+    <Compile Include="Assets\Scripts\Player_Scripts\PlayerInteractions.cs" />
+    <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\PuzzleStats.cs" />
+    <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\Numeric Puzzle\NumericPuzzle.cs" />
     <Compile Include="Assets\Scripts\Other_Scripts\CloseApplication.cs" />
     <Compile Include="Assets\Scripts\Player_Scripts\PlayerMovement_Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\UI_Scripts\SafeArea.cs" />
     <Compile Include="Assets\Scripts\TranslationSystem_Scripts\Base System\TranslatedText.cs" />
-    <Compile Include="Assets\Scripts\TranslationSystem_Scripts\LanguageSettings.cs" />
-    <Compile Include="Assets\Scripts\Player_Scripts\PlayerInputs.cs" />
     <Compile Include="Assets\Scripts\Audio_Scripts\SoundtrackManager.cs" />
     <Compile Include="Assets\Joystick Pack\Examples\JoystickSetterExample.cs" />
     <Compile Include="Assets\Scripts\SceneLoaders_Scripts\GoToScene.cs" />
     <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\Numeric Puzzle\NumericTask.cs" />
     <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\Basket Puzzle\BasketPuzzle.cs" />
-    <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\Rotation Puzzle\RotationPuzzle.cs" />
     <Compile Include="Assets\Scripts\Player_Scripts\GameInitializer.cs" />
     <Compile Include="Assets\LeanTween\Framework\LeanSmooth.cs" />
     <Compile Include="Assets\Scripts\Interactable_Scripts\GenericAnimationToTrigger.cs" />
-    <Compile Include="Assets\Scripts\FeedbackLights_Scripts\FeedbackPuzzleLights.cs" />
+    <Compile Include="Assets\Balaso Software\Runtime\AppTrackingTransparency.cs" />
     <Compile Include="Assets\Scripts\Other_Scripts\MouseLocker.cs" />
-    <Compile Include="Assets\Scripts\SceneLoaders_Scripts\LoadSceneWithLoadingBar.cs" />
+    <Compile Include="Assets\Scripts\GoogleAds\GoogleInterstitialAd.cs" />
     <Compile Include="Assets\Scripts\Other_Scripts\PreventLeavingPlayableArea.cs" />
     <Compile Include="Assets\Scripts\Audio_Scripts\MuteSwitch.cs" />
     <Compile Include="Assets\Scripts\Twean_Scripts\LeanTweanerPopUp.cs" />
     <Compile Include="Assets\Scripts\Interfaces and Others\InteractableObject.cs" />
-    <Compile Include="Assets\Scripts\UI_Scripts\UI_Manager.cs" />
     <Compile Include="Assets\Joystick Pack\Scripts\Joysticks\FloatingJoystick.cs" />
     <Compile Include="Assets\Scripts\Interfaces and Others\IPuzzle.cs" />
     <Compile Include="Assets\LeanTween\Framework\LeanTest.cs" />
-    <Compile Include="Assets\Scripts\Other_Scripts\ConfigPlayerLookSensitivity.cs" />
-    <Compile Include="Assets\Scripts\Player_Scripts\TriggerCutscene.cs" />
     <Compile Include="Assets\Scripts\GameEvents_Script\GameEventListenter.cs" />
-    <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\ToyGatherPuzzle\ToyGatherTask.cs" />
-    <Compile Include="Assets\Scripts\Other_Scripts\OpenWebPage.cs" />
-    <Compile Include="Assets\Scripts\Twean_Scripts\TweenerAnimation.cs" />
     <Compile Include="Assets\Scripts\TranslationSystem_Scripts\Base System\Translate.cs" />
-    <Compile Include="Assets\Scripts\UI_Scripts\UI_InputButton.cs" />
     <Compile Include="Assets\Scripts\Audio_Scripts\SoundManager.cs" />
-    <Compile Include="Assets\Joystick Pack\Examples\JoystickPlayerExample.cs" />
-    <Compile Include="Assets\Scripts\Twean_Scripts\LeanTweanerListAnimator.cs" />
     <Compile Include="Assets\Scripts\GameLogic_Scripts\GameOverScreenLoader.cs" />
-    <Compile Include="Assets\Scripts\TranslationSystem_Scripts\Base System\Language.cs" />
-    <Compile Include="Assets\LeanTween\Framework\LTDescrOptional.cs" />
-    <Compile Include="Assets\Scripts\GameEvents_Script\AvailableGameEvents.cs" />
-    <Compile Include="Assets\Scripts\UI_Scripts\NoteOperator.cs" />
-    <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\Basket Puzzle\BasketBallTask.cs" />
-    <Compile Include="Assets\Scripts\GameEvents_Script\GameEvent.cs" />
-    <Compile Include="Assets\Scripts\IAP\ComprasIAP.cs" />
     <Compile Include="Assets\Scripts\IAP\IAPManager.cs" />
-    <Compile Include="Assets\Scripts\GoogleAds\GoogleInterstitialAd.cs" />
-    <Compile Include="Assets\Balaso Software\Example\AppTrackingTransparencyExample.cs" />
-    <Compile Include="Assets\Balaso Software\Runtime\AppTrackingTransparency.cs" />
+    <Compile Include="Assets\Scripts\Puzzles&amp;Tasks_Scritps\Basket Puzzle\BasketBallTask.cs" />
+    <Compile Include="Assets\Scripts\Other_Scripts\RateUS.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\LeanTween\ReadMe.txt" />
@@ -697,11 +698,17 @@
     <Reference Include="System.Xml.Serialization">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.3.7f1\Editor\Data\NetStandard\compat\2.0.0\shims\netfx\System.Xml.Serialization.dll</HintPath>
     </Reference>
+    <Reference Include="Purchasing.Common">
+      <HintPath>Library\ScriptAssemblies\Purchasing.Common.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.VSCode.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Universal.Shaders">
       <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Shaders.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.Purchasing">
+      <HintPath>Library\ScriptAssemblies\UnityEngine.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Universal.Runtime">
       <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Runtime.dll</HintPath>
@@ -717,6 +724,9 @@
     </Reference>
     <Reference Include="Unity.TextMeshPro">
       <HintPath>Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.Purchasing.SecurityStub">
+      <HintPath>Library\ScriptAssemblies\UnityEngine.Purchasing.SecurityStub.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Searcher.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Searcher.Editor.dll</HintPath>
@@ -751,8 +761,14 @@
     <Reference Include="com.unity.cinemachine.editor">
       <HintPath>Library\ScriptAssemblies\com.unity.cinemachine.editor.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Purchasing.SecurityCore">
+      <HintPath>Library\ScriptAssemblies\UnityEngine.Purchasing.SecurityCore.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.RenderPipelines.Universal.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.Purchasing.Codeless">
+      <HintPath>Library\ScriptAssemblies\UnityEngine.Purchasing.Codeless.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipeline.Universal.ShaderLibrary">
       <HintPath>Library\ScriptAssemblies\Unity.RenderPipeline.Universal.ShaderLibrary.dll</HintPath>
@@ -763,35 +779,20 @@
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.DeviceSimulator.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.DeviceSimulator.Editor.dll</HintPath>
+    <Reference Include="UnityEngine.Purchasing.Stores">
+      <HintPath>Library\ScriptAssemblies\UnityEngine.Purchasing.Stores.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Mathematics.Editor">
       <HintPath>Library\ScriptAssemblies\Unity.Mathematics.Editor.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.Editor">
-      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Purchasing.Common">
-      <HintPath>Library\ScriptAssemblies\Purchasing.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Purchasing">
-      <HintPath>Library\ScriptAssemblies\UnityEngine.Purchasing.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Purchasing.SecurityCore">
-      <HintPath>Library\ScriptAssemblies\UnityEngine.Purchasing.SecurityCore.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Purchasing.Stores">
-      <HintPath>Library\ScriptAssemblies\UnityEngine.Purchasing.Stores.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Purchasing.SecurityStub">
-      <HintPath>Library\ScriptAssemblies\UnityEngine.Purchasing.SecurityStub.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Purchasing.Codeless">
-      <HintPath>Library\ScriptAssemblies\UnityEngine.Purchasing.Codeless.dll</HintPath>
+    <Reference Include="Unity.DeviceSimulator.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.DeviceSimulator.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.Purchasing">
       <HintPath>Library\ScriptAssemblies\UnityEditor.Purchasing.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Core.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.RenderPipelines.Core.Editor.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
